--- a/package.json
+++ b/package.json
@@ -11,13 +11,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.2.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/localize": "~13.1.0",
+    "@angular/material": "^13.2.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@okta/okta-angular": "^5.1.0",
+    "@okta/okta-auth-js": "^5.11.0",
+    "body-parser": "^1.19.1",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "express": "^4.17.2",
+    "mysql": "^2.18.1",
+    "ng2-order-pipe": "^0.1.5",
+    "ngx-order-pipe": "^2.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,5 +49,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.1.4.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
